@@ -1,4 +1,5 @@
 0.10
+ - Update Module::Install to 1.21 version.
 
 0.09 2020-09-16T21:45:15+02:00
  - Badly set 0.08 version, update and fix.
